<resources>
    <string name="app_name" translatable="false">GigaChat</string>
    <string name="authorization_widgets_logIn">Log in</string>
    <string name="authorization_widgets_showPassword_enable">Show password</string>
    <string name="authorization_widgets_showPassword_disable">Hide password</string>
    <string name="authorization_widgets_inputLogin">Input login here</string>
    <string name="authorization_widgets_inputPassword">Input password here</string>
    <string name="authorization_widgets_responseStatus_connectionRefused">The server is not responding. Please try again later.</string>
    <string name="authorization_widgets_responseStatus_userNotFound">Invalid username or password</string>
    <string name="authorization_widgets_responseStatus_notValidLogin">Invalid login. Please check the input.</string>
    <string name="authorization_widgets_input_notValidPassword">Invalid password. Please check the input.</string>
    <string name="authorization_widgets_responseStatus_responseError">An internal error has occurred.\\nContact customer support.</string>
    <string name="authorization_widgets_responseStatus_tooManyRequests">Please wait before trying again</string>
    <string name="authorization_widgets_responseStatus_outdatedClient">Your application is outdated.\\nPlease check for updates.</string>
    <string name="enter_your_messege">Enter your message</string>
    <string name="send">Send</string>
    <string name="authorization_widgets_no_account">Don\'t have an account?</string>
    <string name="authorization_widgets_register">Register</string>
    <string name="registration_widgets_login">Create a login</string>
    <string name="registration_widgets_contact">Input email or phone number</string>
    <string name="registration_widgets_password">Create password</string>
    <string name="registration_widgets_repeat_password">Repeat your password</string>
    <string name="registration_widgets_register">Register</string>
    <string name="registration_widgets_responseStatus_usernameAlreadyRegistered">Username already registered</string>
    <string name="registration_widgets_responseStatus_notValidPassword">Your password must contain at least 1 number and specisl symbol</string>
    <string name="registration_widgets_responseStatus_notValidContact">E-mail must contain \"@\" symbol</string>
    <string name="registration_widgets_responseStatus_notValidName">Invalid username. Please change it</string>
    <string name="registration_widgets_responseStatus_contactAlreadyRegistered">Contact alreadt registered</string>
    <string name="pages_titles_notifications">Notifications</string>
    <string name="pages_titles_feed">Feed</string>
    <string name="pages_titles_channels">Channels</string>
    <string name="pages_titles_settings">Settings</string>
</resources>