<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/responseStutusRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegistration">

    <LinearLayout
        android:layout_width="305dp"
        android:layout_height="504dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/registration_widgets_contact" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/registration_widgets_password" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeatPassword"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/registration_widgets_repeat_password" />

        <CheckBox
            android:id="@+id/showPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authorization_widgets_showPassword_enable" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loign"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/registration_widgets_login" />

        <Button
            android:id="@+id/register"
            android:layout_width="168dp"
            android:layout_height="70dp"
            android:text="@string/registration_widgets_register" />

        <TextView
            android:id="@+id/responseStatusRegister"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:text="TextView" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>